Changelog
=========

2.2-dev0 - (unreleased)
---------------------------

2.1 - (2020-03-03)
---------------------------
* Change: Add jenkins badges
  [valentinab25]

2.0 - (2020-02-25)
---------------------------
* Change: Develop #110159
  [alecghica]

1.9 - (2020-02-14)
---------------------------
* Change: Implement automatic release
  [valentinab25]

1.6 - (2020-02-14)
---------------------------
* Feature: added support for Python 3 and Plone 5.2
  [alecghica refs #110155]
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

1.5 - (2016-06-07)
---------------------------
* Fixed pypi issues
* Fixed typos
* Turn MailArchive into an IMAP client
  [chiridra]

1.4 - (2016-06-07)
---------------------------
* Feature: cron job method added
  [chiridra refs #72719]
* Feature: do not call update archives from front end
  [chiridra refs #72719]
* Feature: added flag for forcing arhive update after save in Properties tab
  [chiridra refs #72719]

1.3 - (2016-06-06)
---------------------------
* Removed version.txt
  [nituacor]
* Fixed mbox zope id.
  [chiridra refs #72719]

1.2 - (2016-06-06)
---------------------------
* Feature: Turn MailArchive into an IMAP client
  - add support for IMAP accounts
  - fixed encoding problems
  - fixed attachments download
  - cleanup
  [chiridra refs #72719]

1.1 - (2016-05-30)
---------------------------
* Initial release