@@ -3,6 +3,8 @@ Changelog
 
 2.2-dev0 - (unreleased)
 ---------------------------
+* Feature: Added cron_export_mails method for mail exports
+  [olimpiurob refs #258348]
 
 2.1 - (2020-03-03)
 ---------------------------
